plugins {
	id "org.akhikhl.gretty" version "1.4.2"
        id "me.champeau.gradle.jmh" version "0.4.5"
}

allprojects  {
  apply plugin: 'maven'
  apply plugin: 'eclipse'

  group = 'org.it-simulator'
  version = '1.3.3'
}

subprojects {
   ext {
	   guavaVersion = '18.0'
	   slf4jVersion = '1.7.24'
	   log4jVersion = '2.8.1'
	   junitVersion = '4.12'
	   jerseyVersion = '2.26'
	   powerMockVersion = '1.6.6'
	   hibernateVersion = '5.2.12.Final'
       elVersion = '3.0.0'
       h2Version = '1.4.194'
       weldVersion = '3.0.1.Final'
       apacheShiroVersion = '1.4.0'
   }
  
  apply plugin: 'java'
  apply plugin: 'me.champeau.gradle.jmh'
  
  sourceCompatibility = 1.9
  targetCompatibility = 1.9
  
  repositories {
    mavenLocal()
    
	mavenCentral()
  }
  
  dependencies {
    compile 'com.google.guava:guava:' + guavaVersion
    compile 'org.slf4j:slf4j-api:' + slf4jVersion
    compile 'org.apache.logging.log4j:log4j-slf4j-impl:' + log4jVersion
    compile 'org.apache.logging.log4j:log4j-api:' + log4jVersion
    compile 'org.apache.logging.log4j:log4j-core:' + log4jVersion
    compile 'org.apache.commons:commons-lang3:3.5'
    
    testCompile 'junit:junit:' + junitVersion
}

test {
   jvmArgs '--add-modules'
   jvmArgs 'java.xml.bind'
   jvmArgs '-Djdk.attach.allowAttachSelf=true'
}
  
}

eclipse { 
	classpath { 
		downloadSources=true
}}
